--- a/dashboard.css
+++ b/dashboard.css
@@ -122,3 +122,25 @@ nav {
         transform: rotate(180deg);
     }
 }
+
+
+.btn-danger {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    /* margin-top: 0px;  */
+    height: 90vh; /* Set height to full viewport height */
+    width: 170vh;
+}
+
+.btn-danger button {
+    background-color: #FF1100;
+    color: white;
+    border: none;
+    text-align: center;
+    border-radius: 50%; /* Make border radius a complete circle */
+    width: 100px; /* Adjust width as needed */
+    height: 100px; /* Adjust height as needed */
+    font-size: 16px; /* Adjust font size as needed */
+    line-height: 100px; /* Adjust line height to vertically center text */
+}
